[package]
name = "tihulu"
version = "0.1.0"
edition = "2021"
description = "Windows TLS 1.2/1.3 key extractor using Debug API"

[dependencies]
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
hmac = "0.12"
sha2 = "0.10"
clap = { version = "4", features = ["derive"] }
rayon = "1.10"
iced-x86 = { version = "1.21", default-features = false, features = ["std", "decoder", "fast_fmt"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_Networking_WinSock",
    "Win32_System_LibraryLoader",
    "Win32_Security",
    "Win32_System_SystemInformation",
    "Win32_System_IO",
] }
